# daggerheart

./: .gitignore  CALUDE.md  README.md  main.py  parse_pdf.py  pyproject.toml  temp_check.py
.claude/: settings.json  settings.local.json
.github/workflows/: deploy.yml
cards/: index.json
cards/comunità/: austera_003.json  bassifondi_006.json  erudita_002.json  forestale_009.json  marittima_005.json  montanara_004.json  nomade_008.json  privilegiata_001.json  sotterranea_007.json
cards/domini/codice/: esilio_012.json  evocare_muraglia_010.json  onda_disgregatrice_019.json  padronanza_del_codice_015.json  rifugio_sicuro_017.json  sigillo_del_castigo_013.json  teletrasporto_011.json  tomo_di_ava_001.json  tomo_di_exota_008.json  tomo_di_grynn_009.json  tomo_di_homet_014.json  tomo_di_illiat_002.json  tomo_di_korvax_006.json  tomo_di_norai_007.json  tomo_di_ronin_018.json  tomo_di_sitil_004.json  tomo_di_tyfar_003.json  tomo_di_vagras_005.json  tomo_di_vyola_016.json  tomo_di_yarrow_020.json  unione_trascendente_021.json
cards/domini/fungale/: apripista_010.json  apripista_011.json  apripista_012.json  ferale_007.json  (+29 more)
cards/origine/: clank_001.json  drakona_002.json  elfi_004.json  fatati_005.json  fauni_006.json  firbolg_007.json  fungril_008.json  galapa_009.json  giganti_010.json  goblin_011.json  halfling_012.json  infernis_014.json  katari_015.json  nani_003.json  orchi_016.json  ribbet_017.json  simiah_018.json  umani_013.json
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
sources/: desc.txt
(+444 files in other folders)
